<resources>
    <string name="app_name">Eclectics Agri</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="post">Post</string>
    <string name="shop">Shop</string>
    <string name="chat">Chat</string>
    <string name="agricultural_insurance">Agricultural Insurance</string>
    <string name="arrow_back">arrow_back</string>
    <string name="crop_insurance">Crop insurance</string>
    <string name="climate_change_or_the_weather_is_unpredictable_protect_your_crops_against_natural_calamities_such_as_pests_lack_of_rainfall_floods_and_theft">Climate change or the weather is unpredictable. Protect your crops against natural calamities such as pests, lack of rainfall,floods and theft</string>
    <string name="insurance_plan_starting_from_ksh_1000">Insurance plan starting from Ksh. 1000</string>
    <string name="plan_validity_1_year">PLAN VALIDITY : 1 YEAR</string>
    <string name="transactions">Transactions</string>
    <string name="we_use_linear_regression_machine_learning_algorithm_to_predict_your_farm_output">We use Linear Regression Machine Learning Algorithm to predict Your Farm Output.</string>
    <string name="hello_buyer_get_affordable_rates_for_market_produce_directly_from_the_farmer">Hello buyer, get affordable rates for market produce, directly from the farmer</string>
    <string name="insurance">Insurance</string>
    <string name="new_technology">New Technology</string>
    <string name="hire_equipment">Hire Equipment</string>
    <string name="account">Account</string>
    <string name="farm_input_needed">Farm input needed</string>
    <string name="task_name">Task name</string>
    <string name="syd">Syd</string>
    <string name="or_view_available_crop_cycles">Or View available crop cycles ?</string>
    <string name="block_a">Block A</string>
    <string name="textview">TextView</string>
    <string name="last_login_apr_10_2024">Last login: Apr 10, 2024</string>
    <string name="view_all_gaps">View All GAPs</string>
    <string name="proceed">Proceed</string>
    <string name="timeout">Timeout</string>
    <string name="we_use_linear_regression_machine_learning_algorithm_to_predict_your_farm_crop_yields">We use Linear Regression Machine Learning Algorithm to predict your farm crop yields.</string>
    <string name="add_new_farm">Add New Farm</string>
    <string name="_0">0</string>
    <string name="farms_available">Farms available</string>
    <string name="search_for_farm">Search for farm</string>
    <string name="what_would_you_like_to_record">What would you like to record?</string>
    <string name="sales_income">SALES / INCOME</string>
    <string name="total_sales">Total:</string>
    <string name="kes_12_000">Kes. 12,000</string>
    <string name="expenses_input_costs">EXPENSES / INPUT COSTS</string>
    <string name="total_sales1">Total:</string>
    <string name="kes_2000">Kes. 2000</string>
    <string name="net_revenue">Net Revenue:</string>
    <string name="kes_10_000">Kes. 10,000</string>
    <string name="shop_now">Shop Now</string>
    <string name="loading_status_update">loading_status_update</string>
    <string name="location">location</string>
    <string name="farmproducedetails">farmProduceDetails</string>
    <string name="addtocart">addtocart</string>
    <string name="image_gap">image-gap</string>
    <string name="remove_from_cart">remove_from_cart</string>
    <string name="addfarmfield">addfarmfield</string>
    <string name="your_account">Your Account</string>
    <string name="rf">RF</string>
    <string name="chevron_forward">chevron_forward</string>
    <string name="profile_details">profile_details</string>
    <string name="profile_details_">Profile Details</string>
    <string name="view_details_that_you_provided">View details that you provided</string>

    <string-array name="cycle_types">
        <item>Crop Cycle</item>
        <item>Service Cycle</item>
    </string-array>

    <string-array name="crop_list">
        <item>Spinach</item>
        <item>Lettuce</item>
        <item>Coriander</item>
        <item>Cucumber Mydas </item>
        <item>Cucumber English</item>
        <item>Cucumber Bologna</item>
        <item>Capsicum</item>
        <item>Tomatoes Anna F1</item>
        <item>Backup-Tomatoes Anna F1</item>
        <item>Cucumber Carmen</item>
        <item>Tomatoes Gold Sun</item>
        <item>Tomatoes Golden Sun</item>
        <item>Capsicum</item>
        <item>Tomatoes Big Rock F1</item>
        <item>Bullet Chillies</item>
        <item>Capsicum Geva</item>
        <item>Tomatoes Anna</item>
    </string-array>

    <string-array name="soil_type">
        <item>Loam soil</item>
        <item>Clay soil</item>
        <item>Sandy soil</item>
    </string-array>


    <string-array name="farm_block_list">
        <item>Select Farm/Block ID</item>
        <item>F0001</item>
        <item>F0002</item>
        <item>F0003</item>
        <item>F0004</item>
    </string-array>

    <string-array name="priorities">
        <item>Low</item>
        <item>High</item>
        <item>Medium</item>
        <item>Urgent</item>
    </string-array>

    <string-array name="statuses">
        <item>OPEN</item>
        <item>IN_PROGRESS</item>
        <item>COMPLETED</item>
        <item>OVERDUE</item>
    </string-array>
    <string-array name="season">
        <item>- Select Crop Season -</item>
        <item>WINTER</item>
        <item>SUMMER</item>
        <item>AUTUMN</item>
        <item>SPRING</item>
    </string-array>

    <string-array name="cycle">
        <item>Filter by:</item>
        <item>Crops</item>
        <item>Livestocks</item>
    </string-array>

    <string-array name="task_names">
        <item>Seedling Acquisition</item>
        <item>Media Acquisition</item>
        <item>Media washing and Treatment</item>
        <item>Preparation of grow trays (washing and sterilizing)/potting of media</item>
        <item>Loading of treated media and seedlings</item>
        <item>Seed sowing</item>
        <item>Watering and fertigation</item>
        <item>Hardening</item>
        <item>Land preparation</item>
        <item>Manure application</item>
        <item>Bed making/gypsum application</item>
    </string-array>
    <integer-array name="task_durations">
        <item>2</item> <!-- Seedling Acquisition -->
        <item>30</item> <!-- Media Acquisition -->
        <item>21</item> <!-- Media washing and Treatment -->
        <item>0</item> <!-- Preparation of grow trays (washing and sterilizing) -->
        <item>10</item> <!-- Loading of treated media and seedlings -->
        <item>0</item> <!-- Watering and Fertigation -->
        <item>1</item> <!-- Hardening -->
        <item>1</item> <!-- Media treatment -->
        <item>2</item> <!-- Transplanting -->
        <item>7</item> <!-- Weeks 1 -->
        <item>0
        </item> <!-- 1.25L of Vegegrow B+A and 68% Nitric acid for pH correction and N supplementation -->
        <item>2</item> <!-- Nutrient recycling -->
        <item>0
        </item> <!-- 1.25L of Vegegrow B+A and 68% Nitric acid for pH correction and N supplementation -->
        <item>2</item> <!-- Flushing with plain water and 50% Hydrogen Peroxide -->
        <item>0
        </item> <!-- 1.25L of Vegegrow B+A 68% Nitric acid for pH correction and N supplementation -->
        <item>7</item> <!-- Weeks 2 -->
        <item>1
        </item> <!-- 2.5L of Bud Booster and 68% Nitric acid for pH correction and N supplementation -->
        <item>0</item> <!-- Nutrient recycling -->
        <item>1
        </item> <!-- 1.25L of Vegegrow B+A and 68% Nitric acid for pH correction and N supplementation -->
        <item>1</item> <!-- Nutrient recycling -->
        <item>0
        </item> <!-- 1.25L of Vegegrow B+A and 68% Nitric acid for pH correction and N supplementation -->
        <item>1</item> <!-- Nutrient recycling -->
        <item>7</item> <!-- Weeks 3 -->
        <item>0</item> <!-- Flushing with plain water and 50% Hydrogen Peroxide -->
        <item>1
        </item> <!-- 2.5L of Bud Booster and 68% Nitric acid for pH correction and N supplementation -->
    </integer-array>

    <string-array name="year_of_farm_mapping">
        <item>2023/2024</item>
        <item>2024/2025</item>
    </string-array>

    <string-array name="season_of_farm_mapping">
        <item>Rainy</item>
        <item>Dry</item>
    </string-array>

    <string-array name="farm_ownership_type">
        <item>Owned</item>
        <item>Rented</item>
    </string-array>

    <string-array name="counties">
        <item>Mombasa</item>
        <item>Nairobi</item>
        <item>Kisii</item>
        <item>Kiambu</item>
        <item>Machakos</item>
        <item>Makueni</item>
        <item>Bomet</item>
        <item>Kitui</item>
        <item>Nyeri</item>
        <item>Nakuru</item>
        <item>Nyandarua</item>
        <item>Bungoma</item>
        <item>Uasin Gishu</item>
    </string-array>

    <string-array name="offers_categories_agrodealers">
        <item>Fertilizers</item>
        <item>Agrochemicals</item>
        <item>Farm machinery</item>
        <item>Land leasing</item>
        <item>Agricultural loans</item>
        <item>Farm inputs</item>
        <item>Veterinary services</item>
    </string-array>

    <string-array name="sample_crop_cycle_tasks">
        <item>Seedling Acquisition</item>
        <item>Potting</item>
        <item>Media Washing and Treatment</item>
        <item>Preparation of grow trays</item>
        <item>Seed sowing</item>
        <item>Watering and feeding</item>
        <item>Hardening</item>
        <item>Cleaning and fumigation</item>
        <item>Transplanting</item>
        <item>Feeding</item>
        <item>Gaping</item>
        <item>Drenching</item>
        <item>Spraying</item>
        <item>Pruning</item>
        <item>Weeding</item>
        <item>Uprooting</item>
        <item>Harvesting</item>
    </string-array>
</resources>